<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@android:color/white">

    <Button
        style="@style/MenuButtons"
        android:text="@string/popular_movies"
        android:id="@+id/popular_movies"
        android:layout_marginTop="50dp"
        />

    <Button
        style="@style/MenuButtons"
        android:text="@string/stock_hawk"
        android:id="@+id/stock_hawk"
        android:layout_marginTop="15dp" />

    <Button
        style="@style/MenuButtons"
        android:text="@string/build_it_bigger"
        android:id="@+id/build_it"
        android:layout_marginTop="15dp" />

    <Button
        style="@style/MenuButtons"
        android:text="@string/make_your_app_material"
        android:id="@+id/material"
        android:layout_marginTop="15dp" />

    <Button
        style="@style/MenuButtons"
        android:text="@string/go_ubiquitous"
        android:id="@+id/ubiquitous"
        android:layout_marginTop="15dp" />

    <Button
        style="@style/MenuButtons"
        android:text="@string/capstone"
        android:id="@+id/capstone"
        android:layout_marginTop="15dp" />

</LinearLayout>